Integrate OpenML dataset fetcher

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dependencies=[
         'tabpfn==0.1.8',
         'netcal>=1.3.5',
         'statsmodels>=0.13.5',
+        'openml>=0.14.2',
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
