--- a/.github/workflows/python-package.yaml
+++ b/.github/workflows/python-package.yaml
@@ -21,6 +21,8 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: Build Python package
+      - name: Update build
         run: python -m pip install --upgrade build
+
+      - name: Build package
         run: python -m build
